# ActorSearch

./: .env  .gitignore  README.md  compose.yaml
postgres/: queries.sql
postgres/docker-entrypoint-initdb.d/: setup.sql
server/: .dockerignore  Cargo.toml  Dockerfile  makefile  tailwind.config.js
server/.sqlx/: query-1a283e18affb3c5cf6d538fe3908d3c37fe6f515d205d86898e389e83c0c6627.json  query-c9fc6fbe80a3c9350927219f74cfef842c145b7598863d118bd391ff6bbd3bef.json
server/src/: api_handlers.rs  database.rs  main.rs  poster_cache.rs
server/static/: tailwind.css
server/static/templates/: index.html  results.html  suggestions.html
