[package]
name = "htmx_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"]}
tera = "1"
tower-http = {version = "0.4", features =["full"]}
lazy_static = "1.4.0"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls", "postgres"]}
dotenv = "0.15.0"
serde = "1.0.164"
serde_json = "1.0.103"
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
